--- a/core/build.gradle
+++ b/core/build.gradle
@@ -32,11 +32,11 @@ afterEvaluate {
             it.mavenLocal()
         }
         publications {
-            maven(MavenPublication) {
+            jitpack(MavenPublication) {
                 from components.release
-                groupId = group
-                artifactId = name
-                version = version
+                groupId = GROUP
+                artifactId = project.name
+                version = VERSION
             }
         }
     }
