--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,7 @@ LIFECYCLE_RUNTIME_KTX=androidx.lifecycle:lifecycle-runtime-ktx:2.3.1
 KOTLIN_GRADLE=org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0
 KOTLIN_STDLIB=org.jetbrains.kotlin:kotlin-stdlib:1.5.0
 KOTLIN_KTX=androidx.core:core-ktx:1.5.0
+
+# publish
+GROUP=com.github.Zhupff.AppSkin
+VERSION=dev-SNAPSHOT
