--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     dependencies {
         classpath BUILD_GRADLE
         classpath KOTLIN_GRADLE
+        classpath "com.github.Zhupff.AppSkin:plugin:dev-SNAPSHOT"
     }
 }
 
